# platform.core.api.player

./: AUTHORS  CMakeLists.txt  project.config
TC/testcase/: Makefile  tslist  utc_media_player.c  utc_media_player_callback.c  utc_media_player_lifecycle.c
debian/: changelog  control  rules
doc/: player_doc.h
include/: player.h  player_display.h  player_evas.h  player_msg.h  player_private.h  player_wayland.h
include/common/: player.h  player_internal.h
include/mobile/: player.h  player_internal.h
include/wearable/: player.h  player_internal.h
packaging/: capi-media-player.changes  capi-media-player.spec  legacy-capi-media-player.changes  legacy-capi-media-player.spec
src/: player.c  player_display.c  player_evas.c  player_internal.c  player_priv.c  player_wayland.c
test/: CMakeLists.txt  legacy_player_es_push_test.c  legacy_player_media_packet_test.c  legacy_player_test.c  player_es_push_test.c  player_media_packet_test.c  player_test.c
